# f2

./: .dir-locals.el  Cargo.toml  license  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  rust.yml
src/: main.rs
