[package]
name = "f2"
version = "2.5.0"
authors = ["Naitik Shah <n@daaku.org>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
base32 = "0.4"
base64 = "0.13"
chacha20poly1305 = "0.7"
crypto-mac = "0.10"
csv = "1.1"
dirs-next = "2.0"
hmac = "0.10"
lazy_static = "1.4"
prettytable-rs = "0.8"
qr2term = "0.2"
rand = "0.8"
rpassword = "5.0"
rprompt = "1.0"
scrypt = "0.6"
self_update = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"
structopt = "0.3"

[profile.release]
lto = true
