[package]
name = "f2"
version = "3.1.0"
authors = ["Naitik Shah <n@daaku.org>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
base32 = "0.4"
base64 = "0.21"
chacha20poly1305 = "0.9"
clap = { version = "4.0.2", features = ["color", "derive", "cargo", "wrap_help"] }
csv = "1.1"
dirs-next = "2.0"
hmac = "0.12"
lazy_static = "1.4"
prettytable-rs = "0.10"
qr2term = "0.3"
rand = "0.8"
rpassword = "7.0"
rprompt = "1.0"
scrypt = "0.10"
self_update = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10"

[profile.release]
lto = true
